--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -24,6 +24,10 @@
     <string name="hypertension">Hypertension</string>
     <string name="cancer">Cancer</string>
     <string name="blood_disorders_text">Blood disorders like sickle cell, hemophilia</string>
+    <string name="activity">Activity</string>
+    <string name="diseases">Diseases</string>
+    <string name="data_input">Data Input</string>
+    <string name="call">Call</string>
 
     <string-array name="gender_array">
         <item>Female</item>
