Add section for notes in patient data input screen.

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -29,6 +29,8 @@
     <string name="data_input">Data Input</string>
     <string name="call">Call</string>
     <string name="nyeri_referral_hospital">Nyeri Referral Hospital</string>
+    <string name="notes">Notes</string>
+    <string name="others">Others</string>
 
     <string-array name="gender_array">
         <item>Female</item>
